Add all routes for crud message
