# src/models/Message.ts
@@ -2,13 +2,15 @@ type MessageRow = {
   messageId: string;
   description: string;
   createdAt: string;
+  updatedAt: string;
 };
 
 export class Message {
   constructor(
     public readonly messageId: string,
     public readonly description: string,
-    public readonly createdAt: string
+    public readonly createdAt: string,
+    public readonly updatedAt: string
   ) {}
 
   toResource() {
@@ -16,10 +18,16 @@ export class Message {
       messageId: this.messageId,
       description: this.description,
       createdAt: this.createdAt,
+      updatedAt: this.updatedAt,
     };
   }
 
   static fromRow(row: MessageRow): Message {
-    return new Message(row.messageId, row.description, row.createdAt);
+    return new Message(
+      row.messageId,
+      row.description,
+      row.createdAt,
+      row.updatedAt
+    );
   }
 }
